# 2024-NET-ZERO-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
admin_page/: qr_create.py  urls.py  views.py
bottle_return/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bottle_return/migrations/: 0001_initial.py  0002_bottlereturn_name_alter_bottlereturn_address.py  0003_alter_bottlereturn_address_alter_bottlereturn_name.py  0004_alter_bottlereturn_image.py
ifive_server/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
kiosk/: admin.py  models.py  serializers.py  urls.py  views.py
kiosk/migrations/: 0001_initial.py  0002_kiosk_name_alter_kiosk_address.py  0003_kiosk_image.py
nginx/: nginx.conf
product/: admin.py  models.py  qr_create.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_product_description_alter_product_price_and_more.py  0003_alter_qrcode_image_allergen.py  0004_product_materials_ko_product_nutrients_ko_and_more.py  0005_product_caution_product_size_and_more.py  0006_product_image.py
templates/: base.html  create_product.html  generate_qr_code.html  product_list.html
